# fabrictestbed

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
fabric/: cli.py  credential.py  exceptions.py
fabric/cli/: cli.py  credential.py  orchestrator.py
fabric_cli/cli/: cli.py  credential.py  orchestrator.py
fabrictestbed/: __init__.py  fabric_manager.py  fabric_manager_v2.py  topology_query_api.py
fabrictestbed/cli/: cli.py
fabrictestbed/external_api/: artifact_manager.py  core_api.py  credmgr_client.py  orchestrator_client.py
fabrictestbed/slice_editor/: __init__.py
fabrictestbed/slice_manager/: __init__.py  slice_manager.py
fabrictestbed/token_manager/: token_manager.py  token_manager_v2.py
fabrictestbed/util/: auth_provider.py  constants.py  resources_v2.py  site_v2.py  utils.py
fabrictestbed_cli/: cli.py
fabrictestbed_cli/api/: __init__.py  api_client.py
test/: test_cli.py
