[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fabrictestbed"
authors = [{name="Komal Thareja", email="kthare10@renci.org"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["Programming Language :: Python :: 3",
               "License :: OSI Approved :: MIT License",
               "Operating System :: OS Independent"]
description = "FABRIC Python Client Library with CLI"
dynamic = ["version"]

keywords = ["Swagger", "FABRIC Python Client Library with CLI"]

requires-python = '>=3.9'
dependencies = [
    "click",
    "fabric-credmgr-client==1.3.2",
    "fabric-orchestrator-client==1.4.5rc2",
    "paramiko"
    ]

scripts = {"fabric-cli" = "fabrictestbed.cli.cli:cli"}

[project.urls]
Home = "https://fabric-testbed.net/"
Sources = "https://github.com/fabric-testbed/fabric-cli"


[tool.flit.module]
name = "fabrictestbed"
