[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fabrictestbed"
authors = [{name="Komal Thareja", email="kthare10@renci.org"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["Programming Language :: Python :: 3",
               "License :: OSI Approved :: MIT License",
               "Operating System :: OS Independent"]
description = "FABRIC Python Client Library with CLI"
dynamic = ["version"]

keywords = ["Swagger", "FABRIC Python Client Library with CLI"]

requires-python = '>=3.9'
dependencies = [
    "click",
    "fabric-credmgr-client==1.6.0b2",
    "fabric-orchestrator-client==1.5.1",
    "paramiko"
    ]

scripts = {"fabric-cli" = "fabrictestbed.cli.cli:cli"}

[project.optional-dependencies]
test = ["coverage>=4.0.3",
        "nose>=1.3.7",
        "pluggy>=0.3.1",
        "py>=1.4.31",
        "randomize>=0.13"
        ]

[project.urls]
Home = "https://fabric-testbed.net/"
Sources = "https://github.com/fabric-testbed/fabric-cli"


[tool.flit.module]
name = "fabrictestbed"
